--- a/inlined-test.html
+++ b/inlined-test.html
@@ -1,5 +1,6 @@
 <!-- Inliner Build Version 4380b7741bb759d6cb997545f3add21ad48f010b -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!--  START  EMAIL.HTML.ERB  -->
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
@@ -347,6 +348,8 @@
         }
     }
     </style>
+    <!--  END  EMAIL.HTML.ERB  -->
+    <!-- START  EMAIL_HEADER.HTML.ERB FILE  -->
     <table class="body" style="border-spacing: 0; border-collapse: collapse; vertical-align: top; text-align: left; height: 100%; width: 100%; color: #222222; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: 200; line-height: 19px; font-size: 14px; background: #EAE9E5; margin: 0; padding: 0;" bgcolor="#EAE9E5">
         <tr style="vertical-align: top; text-align: left; padding: 0;" align="left">
             <td class="center" align="center" valign="top" style="word-break: break-word; -webkit-hyphens: auto; -moz-hyphens: auto; hyphens: auto; border-collapse: collapse !important; vertical-align: top; text-align: center; color: #222222; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: 200; line-height: 19px; font-size: 14px; margin: 0; padding: 0;">
@@ -381,7 +384,7 @@
                     <table class="container" style="border-spacing: 0; border-collapse: collapse; vertical-align: top; text-align: inherit; width: 580px; background: #fff; margin: 0 auto; padding: 0;" bgcolor="#fff">
                         <tr style="vertical-align: top; text-align: left; padding: 0;" align="left">
                             <td style="word-break: break-word; -webkit-hyphens: auto; -moz-hyphens: auto; hyphens: auto; border-collapse: collapse !important; vertical-align: top; text-align: left; color: #222222; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: 200; line-height: 19px; font-size: 14px; margin: 0; padding: 0;" align="left" valign="top">
-                                <!-- content start HEADER FILE ABOVE -->
+                                <!-- END  EMAIL_HEADER.HTML.ERB FILE  -->
                                 <!-- WELCOME start -->
                                 <table class="row" style="border-spacing: 0; border-collapse: collapse; vertical-align: top; text-align: left; width: 100%; position: relative; display: block; padding: 0px;">
                                     <tr style="vertical-align: top; text-align: left; padding: 0;" align="left">
@@ -615,6 +618,65 @@
                                     </tr>
                                 </table>
                                 <!-- Invite With Movie END -->
+
+                                <!--  CENTERED MOVIEPOSTER With VERTICAL BUTTONS START -->
+                                <table class="row" style="border-spacing: 0; border-collapse: collapse; vertical-align: top; text-align: left; width: 100%; position: relative; display: block; padding: 0px;">
+                                    <tr style="vertical-align: top; text-align: left; padding: 0;" align="left">
+                                        <td class="wrapper last" style="word-break: break-word; -webkit-hyphens: auto; -moz-hyphens: auto; hyphens: auto; border-collapse: collapse !important; vertical-align: top; text-align: left; position: relative; color: #222222; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: 200; line-height: 19px; font-size: 14px; margin: 0; padding: 10px 0px 0px;" align="left" valign="top">
+                                            <table class="twelve columns" style="border-spacing: 0; border-collapse: collapse; vertical-align: top; text-align: left; width: 580px; margin: 0 auto; padding: 0;">
+                                                <tr style="vertical-align: top; text-align: left; padding: 0;" align="left">
+                                                    <td class="center text-pad" style="word-break: break-word; -webkit-hyphens: auto; -moz-hyphens: auto; hyphens: auto; border-collapse: collapse !important; vertical-align: top; text-align: center; color: #222222; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: 200; line-height: 19px; font-size: 14px; margin: 0; padding: 0px 10px 10px;" align="center" valign="top">
+                                                        <center style="width: 100%; min-width: 580px;">
+                                                            <h1 style="color: #222222; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: 200; text-align: left; line-height: 1.3; word-break: normal; font-size: 40px; margin: 0; padding: 0;" align="left">Hi Dude</h1>
+                                                            <p style="color: #222222; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: 200; text-align: left; line-height: 19px; font-size: 14px; margin: 0 0 0px; padding: 0;" align="left">Lorem ipsum dolor sit amet, consectetur adipisicing elit, <a href="#" style="color: #09AE8B; text-decoration: none;">sed do eiusmod tempor </a>incididunt ut labore et. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet.</p>
+                                                        </center>
+                                                    </td>
+                                                    <td class="expander" style="word-break: break-word; -webkit-hyphens: auto; -moz-hyphens: auto; hyphens: auto; border-collapse: collapse !important; vertical-align: top; text-align: left; visibility: hidden; width: 0px; color: #222222; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: 200; line-height: 19px; font-size: 14px; margin: 0; padding: 0;" align="left" valign="top"></td>
+                                                </tr>
+                                                <tr style="vertical-align: top; text-align: left; padding: 0;" align="left">
+                                                    <td class="sub-grid" style="word-break: break-word; -webkit-hyphens: auto; -moz-hyphens: auto; hyphens: auto; border-collapse: collapse !important; vertical-align: top; text-align: left; color: #222222; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: 200; line-height: 19px; font-size: 14px; margin: 0; padding: 0px 0px 10px;" align="left" valign="top">
+                                                        <table style="border-spacing: 0; border-collapse: collapse; vertical-align: top; text-align: left; width: 100%; padding: 0;">
+                                                            <tbody>
+                                                                <tr style="vertical-align: top; text-align: left; padding: 0;" align="left">
+                                                                    <td class="four sub-columns" style="word-break: break-word; -webkit-hyphens: auto; -moz-hyphens: auto; hyphens: auto; border-collapse: collapse !important; vertical-align: top; text-align: left; min-width: 0px; width: 33.333333%; color: #222222; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: 200; line-height: 19px; font-size: 14px; margin: 0; padding: 0 5px;" align="left" valign="top">
+                                                                        <table class="button" style="border-spacing: 0; border-collapse: collapse; vertical-align: top; text-align: left; width: 100%; overflow: hidden; padding: 0;">
+                                                                            <tr style="vertical-align: top; text-align: left; padding: 0;" align="left">
+                                                                                <td class="wanna" style="word-break: break-word; -webkit-hyphens: auto; -moz-hyphens: auto; hyphens: auto; border-collapse: collapse !important; vertical-align: top; text-align: center; color: #09AE8B !important; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: 200; line-height: 19px; font-size: 14px; display: block; width: auto !important; background-color: #09AE8B !important; box-shadow: inset 0px 0px 1px 0px rgba(0,0,0,0.75); margin: 2px 0 0; padding: 8px 0;" align="center" bgcolor="#09AE8B !important" valign="top">
+                                                                                    <a href="#" style="color: #ffffff; text-decoration: none; font-weight: 200; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 16px;">Wanna Watch</a>
+                                                                                </td>
+                                                                            </tr>
+                                                                        </table>
+                                                                        <table class="button" style="border-spacing: 0; border-collapse: collapse; vertical-align: top; text-align: left; width: 100%; overflow: hidden; padding: 0;">
+                                                                            <tr style="vertical-align: top; text-align: left; padding: 0;" align="left">
+                                                                                <td class="seen" style="word-break: break-word; -webkit-hyphens: auto; -moz-hyphens: auto; hyphens: auto; border-collapse: collapse !important; vertical-align: top; text-align: center; color: #3CACE6 !important; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: 200; line-height: 19px; font-size: 14px; display: block; width: auto !important; background-color: #3CACE6 !important; box-shadow: inset 0px 0px 1px 0px rgba(0,0,0,0.75); margin: 2px 0 0; padding: 8px 0;" align="center" bgcolor="#3CACE6 !important" valign="top">
+                                                                                    <a href="#" style="color: #ffffff; text-decoration: none; font-weight: 200; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 16px;">Seen it</a>
+                                                                                </td>
+                                                                            </tr>
+                                                                        </table>
+                                                                        <table class="button" style="border-spacing: 0; border-collapse: collapse; vertical-align: top; text-align: left; width: 100%; overflow: hidden; padding: 0;">
+                                                                            <tr style="vertical-align: top; text-align: left; padding: 0;" align="left">
+                                                                                <td class="dont" style="word-break: break-word; -webkit-hyphens: auto; -moz-hyphens: auto; hyphens: auto; border-collapse: collapse !important; vertical-align: top; text-align: center; color: #E64C3C !important; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: 200; line-height: 19px; font-size: 14px; display: block; width: auto !important; background-color: #E64C3C !important; box-shadow: inset 0px 0px 1px 0px rgba(0,0,0,0.75); margin: 2px 0 0; padding: 8px 0;" align="center" bgcolor="#E64C3C !important" valign="top">
+                                                                                    <a href="#" style="color: #ffffff; text-decoration: none; font-weight: 200; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 16px;">Don't Wanna</a>
+                                                                                </td>
+                                                                            </tr>
+                                                                        </table>
+                                                                    </td>
+                                                                    <td class="four sub-columns" style="word-break: break-word; -webkit-hyphens: auto; -moz-hyphens: auto; hyphens: auto; border-collapse: collapse !important; vertical-align: top; text-align: left; min-width: 0px; width: 33.333333%; color: #222222; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: 200; line-height: 19px; font-size: 14px; margin: 0; padding: 0 5px;" align="left" valign="top">
+                                                                        <img alt="Birdman poster" class="poster center" src="https://image.tmdb.org/t/p/w342/kG1UW1AHGEVj62YSfAiyx1qiVGI.jpg" style="outline: none; text-decoration: none; -ms-interpolation-mode: bicubic; width: auto; max-width: 100%; float: none; clear: both; display: block; margin: 0 auto;" align="none" /></td>
+                                                                    <td class="four sub-columns last" style="word-break: break-word; -webkit-hyphens: auto; -moz-hyphens: auto; hyphens: auto; border-collapse: collapse !important; vertical-align: top; text-align: left; min-width: 0px; width: 33.333333%; color: #222222; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: 200; line-height: 19px; font-size: 14px; margin: 0; padding: 0 5px;" align="left" valign="top">
+                                                                    </td>
+                                                                </tr>
+                                                            </tbody>
+                                                        </table>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                        </td>
+                                    </tr>
+                                </table>
+                                <!--  CENTERED MOVIEPOSTER With VERTICAL BUTTONS END -->
+
+                                <!-- content END FOOTER FILE BELOW -->
                                 <br />
                                 <br />
                                 <!-- Unsubscribe -  START-->
@@ -635,7 +697,6 @@
                                     </tr>
                                 </table>
                                 <!-- Unsubscribe -  END-->
-                                <!-- content END FOOTER FILE BELOW -->
                             </td>
                         </tr>
                     </table>
