--- a/index.html
+++ b/index.html
@@ -194,16 +194,23 @@
                                     </tr>
                                 </table>
                                 <!--  USER ICON Centered END -->
-                                <!--  LEFT ICON WITH TEXT START -->
+                                <!--  CENTERED TEXT START -->
                                 <table class="row">
                                     <tr>
                                         <td class="wrapper last">
                                             <table class="twelve columns">
                                                 <tr>
                                                     <td class="text-pad">
-                                                        <img class="user-icon" src="https://s3.amazonaws.com/uifaces/faces/twitter/chloepark/128.jpg">
-                                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet.</p>
-                                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet.</p>
+                                                        <h1 class="text-center">This Text Is H1 Centered</h1>
+                                                        <h2 class="text-center">This Text Is H2 Centered</h2>
+                                                        <h3 class="text-center">This Text Is H3 Centered</h3>
+                                                        <h4 class="text-center">This Text Is H4 Centered</h4>
+                                                        <h5 class="text-center">This Text Is H5 Centered</h5>
+                                                        <h6 class="text-center">This Text Is H6 Centered</h6>
+
+                                                        <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet.</p>
+
+                                                        <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet.</p>
                                                         <table class="button">
                                                             <tr>
                                                                 <td>
@@ -218,7 +225,7 @@
                                         </td>
                                     </tr>
                                 </table>
-                                <!--  LEFT ICON WITH TEXT END -->
+                                <!--  CENTERED TEXT END -->
                                 <!-- Invite With Movie Start -->
                                 <table class="row">
                                     <tr>
@@ -298,6 +305,12 @@
                                                 <center>
                                                     <h1>Hi Dude</h1>
                                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, <a href="#">sed do eiusmod tempor </a>incididunt ut labore et. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet.</p>
+                                                    <h1>This Text Is H1</h1>
+                                                    <h2>This Text Is h2</h2>
+                                                    <h3>This Text Is h3</h3>
+                                                    <h4>This Text Is h4</h4>
+                                                    <h5>This Text Is h5</h5>
+
                                                 </center>
                                             </td>
                                             <td class="expander"></td>
