Revert "Added New section to index.html"
This reverts commit f5838b2c508c84c0bb57524d07b4309bb379f29d.

--- a/index.html
+++ b/index.html
@@ -301,17 +301,14 @@
                                 <td class="wrapper last">
                                     <table class="twelve columns">
                                         <tr>
-                                            <td class="center text-pad">
-                                                <center>
-                                                    <h1>Hi Dude</h1>
-                                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, <a href="#">sed do eiusmod tempor </a>incididunt ut labore et. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet.</p>
-                                                    <h1>This Text Is H1</h1>
-                                                    <h2>This Text Is h2</h2>
-                                                    <h3>This Text Is h3</h3>
-                                                    <h4>This Text Is h4</h4>
-                                                    <h5>This Text Is h5</h5>
-
-                                                </center>
+                                            <td class="text-pad">
+                                                <h1>Hi Dude</h1>
+                                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, <a href="#">sed do eiusmod tempor </a>incididunt ut labore et. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet.</p>
+                                                <h1>This Text Is H1</h1>
+                                                <h2>This Text Is h2</h2>
+                                                <h3>This Text Is h3</h3>
+                                                <h4>This Text Is h4</h4>
+                                                <h5>This Text Is h5</h5>
                                             </td>
                                             <td class="expander"></td>
                                         </tr>
